p2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: app-one
